--- a/abogacia.html
+++ b/abogacia.html
@@ -66,34 +66,46 @@
 
     <section class="section">
         <div class="container about">
-            <h2>Información General</h2>
-            <p>La carrera de Abogacía en la Facultad de Derecho de la Universidad Nacional de Rosario brinda una
+            <h2>Información general</h2>
+            <p>
+                La carrera de Abogacía en la Facultad de Derecho de la Universidad Nacional de Rosario brinda una
                 formación integral en ciencias jurídicas, orientada al análisis crítico del derecho y a la defensa de
                 los valores democráticos. La propuesta académica se apoya en los principios de la Reforma Universitaria
                 de 1918 y en el compromiso con la universidad pública.
-
+            </p>
+            <p>
                 El plan de estudios ofrece una base sólida en las distintas ramas del derecho, preparando a los
                 estudiantes para comprender y abordar problemáticas jurídicas complejas desde una perspectiva ética y
-                social.</p>
+                social.
+            </p>
 
-            <h3>Cursado y Materias</h3>
-            <p>La carrera se organiza en materias anuales y cuatrimestrales que abarcan áreas como derecho civil, penal,
-                constitucional, laboral, administrativo y comercial.
+            <h3>Cursado y materias</h3>
+            <p>
+                La carrera se organiza en materias anuales y cuatrimestrales que abarcan áreas como derecho civil,
+                penal, constitucional, laboral, administrativo y comercial.
+            </p>
+            <p>
                 El cursado combina formación teórica con instancias prácticas, promoviendo el debate, el análisis de
                 casos y la participación en actividades académicas complementarias.
-
+            </p>
+            <p>
                 Además, se impulsa el acompañamiento al estudiante durante la cursada y el acceso a herramientas que
-                facilitan el recorrido académico.</p>
+                facilitan el recorrido académico.
+            </p>
 
-            <h3>Salida Profesional</h3>
-            <p>Los egresados de la carrera de Abogacía están habilitados para ejercer la profesión en el ámbito público
+            <h3>Salida profesional</h3>
+            <p>
+                Los egresados de la carrera de Abogacía están habilitados para ejercer la profesión en el ámbito público
                 y privado. Pueden desempeñarse como abogados litigantes, asesores jurídicos, funcionarios públicos,
-                integrantes del Poder Judicial o en organizaciones sociales y empresas.
-
+                integrantes del Poder Judicial, organizaciones sociales o empresas.
+            </p>
+            <p>
                 La formación recibida permite ejercer la profesión con responsabilidad, compromiso social y respeto por
-                el Estado de Derecho.</p>
+                el Estado de Derecho.
+            </p>
         </div>
     </section>
+
     <section class="section section-light">
         <div class="container">
             <h2>Información útil</h2>
@@ -109,7 +121,7 @@
                 <a href="https://drive.google.com/drive/u/1/folders/1GD3n-MalwU8Q2I8BdGBVSjk9R2-rdGQW" target="_blank"
                     rel="noopener noreferrer" class="card link-card">
                     <h3>Resúmenes y guías de estudio</h3>
-                    <p>Apuntes y guías pensadas para facilitar el estudio y la preparación de exámenes.</p>
+                    <p>Apuntes y guías pensados para facilitar el estudio y la preparación de exámenes.</p>
                     <span class="card-action">Acceder a resúmenes</span>
                 </a>
 
@@ -130,7 +142,7 @@
                 <a href="https://drive.google.com/drive/u/1/folders/1-eaDQ4PdgPk6f4LiLbcW-Amk26FkzWQd" target="_blank"
                     rel="noopener noreferrer" class="card link-card">
                     <h3>Grupos de estudio</h3>
-                    <p>Espacio para sumarte o presentar grupos de estudio entre estudiantes.</p>
+                    <p>Espacio para sumarte o crear grupos de estudio entre estudiantes.</p>
                     <span class="card-action">Participar</span>
                 </a>
 
@@ -144,19 +156,17 @@
                 <a href="https://drive.google.com/drive/folders/1E_BdOg7NS0EaiAaTBmr9EDUlqNMywWz3" target="_blank"
                     rel="noopener noreferrer" class="card link-card">
                     <h3>Plan de estudios</h3>
-                    <p>Estructura completa de la carrera, materias y correlatividades.</p>
+                    <p>Estructura completa de la carrera, con materias y correlatividades.</p>
                     <span class="card-action">Ver plan</span>
                 </a>
             </div>
-
         </div>
     </section>
-
 
     <section class="cta">
         <div class="container">
             <h2>Seguinos en Instagram</h2>
-            <p>Enterate de novedades, actividades y todo lo que pasa en la facultad.</p>
+            <p>Entérate de novedades, actividades y todo lo que pasa en la facultad.</p>
 
             <div class="social-grid">
                 <a href="https://www.instagram.com/franjamorada.corretaje?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
