--- a/carreras.html
+++ b/carreras.html
@@ -83,7 +83,7 @@
     <section class="cta">
         <div class="container">
             <h2>Seguinos en Instagram</h2>
-            <p>Enterate de novedades, actividades y todo lo que pasa en la facultad.</p>
+            <p>Entérate de novedades, actividades y todo lo que pasa en la facultad.</p>
 
             <div class="social-grid">
                 <a href="https://www.instagram.com/franjamorada.corretaje?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
