--- a/consejo_directivo.html
+++ b/consejo_directivo.html
@@ -70,18 +70,18 @@
             <!-- TEXTO SUPERIOR -->
             <div class="proposal-top">
                 <p>
-                    El <b>Consejo Directivo</b> es el máximo órgano de cogobierno dentro de la Facultad, en él todos los
-                    claustros tienen su representación. Se conforma por <i>estudiantes, graduados, docentes, y
-                        nodocentes.</i>
+                    El <b>Consejo Directivo</b> es el máximo órgano de cogobierno dentro de la Facultad. En él, todos
+                    los
+                    claustros tienen representación: <i>estudiantes, graduados, docentes y nodocentes</i>.
                 </p>
                 <p>
-                    Los miembros de este órgano se eligen mediante elecciones y se conforma así la representación dentro
+                    Los miembros de este órgano se eligen mediante elecciones, conformando así la representación dentro
                     del Consejo.
                 </p>
                 <p>
-                    Este órgano es el encargado de tratar los proyectos estudiantiles, cuestiones sobre el Reglamento
-                    Académico o el Plan de Estudios, discute y aprueba anualmente el Calendario Académico, cargos
-                    docentes, conformación de tribunales para concursos docentes, entre otros.
+                    Es el encargado de tratar proyectos estudiantiles, cuestiones vinculadas al Reglamento Académico y
+                    al Plan de Estudios, así como de discutir y aprobar anualmente el Calendario Académico, los cargos
+                    docentes y la conformación de tribunales para concursos, entre otros temas.
                 </p>
             </div>
 
@@ -89,80 +89,78 @@
             <div class="proposal-row">
                 <div class="proposal-text">
                     <p>
-                        Desde la Franja presentamos muchos proyectos para mejorar el trayecto de los y las estudiantes
-                        por la Fder.
-
-                        Presentamos proyectos que fueron tratados y aprobados en este órgano, entre ellos:
+                        Desde Franja presentamos numerosos proyectos para mejorar el trayecto académico de las y los
+                        estudiantes de la FDer.
                     </p>
-
                     <p>
-                    <ul>
-                        - La posibilidad que los estudiantes libres puedan acceder de forma unificada a los regulares en
-                        el doble llamado
-                    </ul>
-                    <br>
-                    <ul>
-                        - Cursado en bloque, que permite que aquellos estudiantes que viven lejos puedan elegir el
-                        bloque horario que quieran cursar para facilitar el acceso al cursado regular.
-                    </ul>
-                    <br>
-                    <ul>
-                        - Proyecto P.O.Der - Plan de Obras en Derecho: Presentamos un proyecto de plan de obras para
-                        remodelar la Facultad en varias etapas. Hoy estamos atravesando la ultima de sus etapas y pronto
-                        volveremos a tener un edificio seguro y la facultad que queremos!
-                    </ul>
+                        Muchos de estos proyectos fueron tratados y aprobados en este órgano, entre ellos:
                     </p>
+
+                    <ul>
+                        <li>
+                            La posibilidad de que los estudiantes libres puedan acceder, de forma unificada, a los
+                            estudiantes regulares en el doble llamado.
+                        </li>
+                        <li>
+                            El cursado en bloque, que permite a quienes viven lejos elegir un bloque horario específico,
+                            facilitando el acceso al cursado regular.
+                        </li>
+                        <li>
+                            Proyecto P.O.Der – Plan de Obras en Derecho: un plan de obras para remodelar la Facultad en
+                            distintas etapas. Actualmente estamos transitando la última etapa y pronto volveremos a
+                            contar con un edificio seguro y la Facultad que queremos.
+                        </li>
+                    </ul>
                 </div>
 
                 <div class="proposal-image">
-                    <img src="img/Propuesta/ConsejoD/Foto1.jpeg" alt="Equipo de clases de consulta">
+                    <img src="img/Propuesta/ConsejoD/Foto1.jpeg" alt="Sesión del Consejo Directivo">
                 </div>
             </div>
 
             <!-- TEXTO MEDIO -->
             <div class="proposal-top">
                 <p>
-                    El <b>Consejo Directivo</b> es el máximo órgano de cogobierno dentro de la Facultad, en él todos los
-                    claustros tienen su representación. Se conforma por <i>estudiantes, graduados, docentes, y
-                        nodocentes.</i>
+                    El <b>Consejo Directivo</b> es el máximo órgano de cogobierno dentro de la Facultad y garantiza la
+                    representación de todos los claustros.
                 </p>
                 <p>
-                    Los miembros de este órgano se eligen mediante elecciones y se conforma así la representación dentro
-                    del Consejo.
+                    A través de elecciones periódicas, se define la composición del Consejo y la representación de cada
+                    sector.
                 </p>
                 <p>
-                    Este órgano es el encargado de tratar los proyectos estudiantiles, cuestiones sobre el Reglamento
-                    Académico o el Plan de Estudios, discute y aprueba anualmente el Calendario Académico, cargos
-                    docentes, conformación de tribunales para concursos docentes, entre otros.
+                    Desde este espacio se debaten y deciden políticas académicas fundamentales para el funcionamiento de
+                    la Facultad.
                 </p>
             </div>
+
             <!-- FILA 2 -->
             <div class="propuesta-images propuesta-images--doble">
                 <div class="propuesta-image">
-                    <img src="img/Propuesta/ConsejoD/Corredor.png" alt="Representantes de la UNR en el Consejo Superior">
+                    <img src="img/Propuesta/ConsejoD/Corredor.png" alt="Instalaciones de la Facultad de Derecho UNR">
                 </div>
 
                 <div class="propuesta-image">
-                    <img src="img/Propuesta/ConsejoD/Seguridadpng.png" alt="Obras de seguridad en la Facultad de Derecho UNR">
+                    <img src="img/Propuesta/ConsejoD/Seguridadpng.png"
+                        alt="Obras de seguridad en la Facultad de Derecho UNR">
                 </div>
             </div>
-
 
             <!-- FILA 3 -->
             <div class="proposal-row reverse">
                 <div class="proposal-image">
-                    <img src="img/Propuesta/ConsejoD/ConsejoSuperior.jpeg" alt="Grupos de estudio">
+                    <img src="img/Propuesta/ConsejoD/ConsejoSuperior.jpeg" alt="Sesión del Consejo Superior">
                 </div>
 
                 <div class="proposal-text">
                     <p>
-                        El Consejo Superior es el órgano de máxima representación de la Universidad Nacional de Rosario,
-                        cuenta con representación de miembros de toda la comunidad universitaria de las diferentes
-                        Facultades que conforman la UNR.
+                        El <b>Consejo Superior</b> es el órgano de máxima representación de la Universidad Nacional de
+                        Rosario, con participación de todos los claustros de las distintas Facultades que integran la
+                        UNR.
                     </p>
                     <p>
-                        En dicho órgano contamos con un Consejero que se encarga de discutir las políticas
-                        universitarias, y de promover la cooperación de las distintas instituciones de la UNR
+                        En este espacio contamos con un consejero que se encarga de debatir las políticas universitarias
+                        y de promover la cooperación entre las distintas instituciones que conforman la Universidad.
                     </p>
                 </div>
             </div>
@@ -172,7 +170,7 @@
     <section class="cta">
         <div class="container">
             <h2>Seguinos en Instagram</h2>
-            <p>Enterate de novedades, actividades y todo lo que pasa en la facultad.</p>
+            <p>Entérate de novedades, actividades y todo lo que pasa en la facultad.</p>
 
             <div class="social-grid">
                 <a href="https://www.instagram.com/franjamorada.corretaje?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
