--- a/corretaje.html
+++ b/corretaje.html
@@ -65,35 +65,50 @@
 
     <section class="section">
         <div class="container about">
-            <h2>Información General</h2>
-            <p>La carrera de Corretaje Inmobiliario en la Facultad de Derecho de la Universidad Nacional de Rosario
-                forma profesionales capacitados para intervenir en operaciones inmobiliarias con respaldo legal, ético y
-                técnico. La formación combina conocimientos jurídicos, económicos y comerciales, fundamentales para el
-                ejercicio profesional.
-
+            <h2>Información general</h2>
+            <p>
+                La carrera de Corretaje Inmobiliario en la Facultad de Derecho de la Universidad Nacional de Rosario
+                forma profesionales capacitados para intervenir en operaciones inmobiliarias con respaldo legal,
+                ético y técnico. La formación combina conocimientos jurídicos, económicos y comerciales, fundamentales
+                para el ejercicio profesional.
+            </p>
+            <p>
                 El plan de estudios está orientado a brindar herramientas prácticas y teóricas que permiten desempeñarse
                 con solvencia en el mercado inmobiliario, respetando el marco normativo vigente y los principios de la
-                universidad pública.</p>
+                universidad pública.
+            </p>
 
-            <h3>Cursado y Materias</h3>
-            <p>La carrera se estructura en materias anuales y cuatrimestrales que abarcan áreas como derecho civil,
-                contratos, registral, tasaciones, administración inmobiliaria y práctica profesional.
-                El cursado incluye instancias teóricas y prácticas que preparan al estudiante para situaciones reales
-                del ejercicio del corretaje.
-
+            <h3>Cursado y materias</h3>
+            <p>
+                La carrera se estructura en materias anuales y cuatrimestrales que abarcan áreas como derecho civil,
+                contratos, derecho registral, tasaciones, administración inmobiliaria y práctica profesional.
+            </p>
+            <p>
+                El cursado incluye instancias teóricas y prácticas que preparan al estudiante para afrontar situaciones
+                reales del ejercicio del corretaje.
+            </p>
+            <p>
                 Además, se fomenta el acompañamiento académico y la participación en espacios de consulta y formación
-                complementaria.</p>
+                complementaria.
+            </p>
 
-            <h3>Salida Profesional</h3>
-            <p>Los egresados de Corretaje Inmobiliario pueden desempeñarse como corredores inmobiliarios matriculados,
-                asesorando y gestionando operaciones de compra, venta, alquiler y administración de bienes inmuebles.
-                También pueden desarrollarse en inmobiliarias, empresas constructoras, estudios jurídicos, o de manera
-                independiente.
-
+            <h3>Salida profesional</h3>
+            <p>
+                Los egresados de la carrera de Corretaje Inmobiliario pueden desempeñarse como corredores inmobiliarios
+                matriculados, asesorando y gestionando operaciones de compra, venta, alquiler y administración de bienes
+                inmuebles.
+            </p>
+            <p>
+                También pueden desarrollarse en inmobiliarias, empresas constructoras, estudios jurídicos o ejercer de
+                manera independiente.
+            </p>
+            <p>
                 La carrera brinda una formación sólida para ejercer la profesión con responsabilidad social, compromiso
-                ético y conocimiento del marco legal.</p>
+                ético y conocimiento del marco legal.
+            </p>
         </div>
     </section>
+
     <section class="section section-light">
         <div class="container">
             <h2>Información útil</h2>
@@ -156,7 +171,7 @@
     <section class="cta">
         <div class="container">
             <h2>Seguinos en Instagram</h2>
-            <p>Enterate de novedades, actividades y todo lo que pasa en la facultad.</p>
+            <p>Entérate de novedades, actividades y todo lo que pasa en la facultad.</p>
 
             <div class="social-grid">
                 <a href="https://www.instagram.com/franjamorada.corretaje?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
