--- a/fur.html
+++ b/fur.html
@@ -70,21 +70,23 @@
             <!-- TEXTO SUPERIOR -->
             <div class="proposal-top">
                 <p>
-                    La Federación Universitaria de Rosario es el máximo órgano de representación gremial de la UNR, en
-                    ella están representadas los 12 centro de estudiantes de las distintas casas de estudios de la UNR.
+                    La Federación Universitaria de Rosario (FUR) es el máximo órgano de representación gremial de la
+                    Universidad Nacional de Rosario. En ella están representados los 12 centros de estudiantes de las
+                    distintas casas de estudio que conforman la UNR.
                 </p>
             </div>
 
             <!-- FILA 1 -->
             <div class="proposal-row">
                 <div class="proposal-image">
-                    <img src="img/Propuesta/FUR/F1.jpeg" alt="Grupos de estudio">
+                    <img src="img/Propuesta/FUR/F1.jpeg" alt="Federación Universitaria de Rosario">
                 </div>
 
                 <div class="proposal-text">
                     <p>
-                        Desde el 2022 el frente "<b>reformismo en acción</b>" conduce la Federación, devolviéndosela a
-                        los estudiantes y llenándola de contenido!
+                        Desde 2022, el frente <b>Reformismo en Acción</b> conduce la Federación, devolviéndosela a las y
+                        los
+                        estudiantes y llenándola de contenido.
                     </p>
                     <p>
                         <i>Somos la Federación Universitaria de Rosario.</i>
@@ -95,11 +97,16 @@
             <!-- TEXTO MEDIO -->
             <div class="proposal-top">
                 <p>
-
-                    Desde que el frente "<i>Reformismo en acción</i>" asumió la conducción de la Federación se puso como
-                    principal objetivo representar y ayudar verdaderamente a las y los estudiantes. En primer lugar, que
-                    la comunidad universitaria conozca la FUR, ya que durante años la misma estuvo en manos de
-                    agrupaciones que no lograba brindar respuestas, ni herramientas a los estudiantes.
+                    Desde que el frente <i>Reformismo en Acción</i> asumió la conducción de la Federación, se propuso
+                    como
+                    objetivo principal representar y acompañar verdaderamente a las y los estudiantes.
+                </p>
+                <p>
+                    Uno de los primeros desafíos fue lograr que la comunidad universitaria conozca la FUR, ya que
+                    durante
+                    años estuvo en manos de agrupaciones que no lograron brindar respuestas ni herramientas concretas a
+                    los
+                    estudiantes.
                 </p>
             </div>
 
@@ -107,38 +114,40 @@
             <div class="proposal-row reverse">
                 <div class="proposal-text">
                     <p>
-                        Entre todas las propuestas que llevamos a cabo está la <b><i>Comunidad FUR</i></b>, la misma
-                        busca a través de diferentes convenios brindar precios accesibles para los estudiantes de
-                        nuestra universidad en distintos rubros.
+                        Entre las propuestas que llevamos adelante se encuentra la <b><i>Comunidad FUR</i></b>, una
+                        iniciativa que, a través de distintos convenios, busca ofrecer precios accesibles a los
+                        estudiantes
+                        de nuestra universidad en diversos rubros.
                     </p>
-
                     <p>
-                        La misma incluye descuentos para acceder a material de estudio, material para cada carrera,
-                        espacios de recreación como bares, gimnasios, librerías y locales de las cercanías de las
-                        distintas casas de estudio, entre otros.
+                        La Comunidad FUR incluye descuentos en material de estudio, insumos para cada carrera y espacios
+                        de
+                        recreación como bares, gimnasios, librerías y comercios cercanos a las distintas casas de
+                        estudio,
+                        entre otros.
                     </p>
                 </div>
 
                 <div class="proposal-image">
-                    <img src="img/Propuesta/FUR/F2.jpeg" alt="Equipo de clases de consulta">
+                    <img src="img/Propuesta/FUR/F2.jpeg" alt="Convenios y beneficios para estudiantes">
                 </div>
             </div>
 
             <!-- FILA 3 -->
             <div class="proposal-row">
                 <div class="proposal-image">
-                    <img src="img/Propuesta/FUR/F3.jpeg" alt="Grupos de estudio">
+                    <img src="img/Propuesta/FUR/F3.jpeg" alt="Beneficios Comunidad FUR">
                 </div>
 
                 <div class="proposal-text">
                     <p>
-                        Además con la Comunidad se puede acceder a un descuento y utilizar todas las promociones de
-                        AMECRO (Asociación Mutual de Empleados de Comercio) con increíbles beneficios y descuentos!
+                        Además, a través de la Comunidad FUR se puede acceder a descuentos y promociones de AMECRO
+                        (Asociación Mutual de Empleados de Comercio), con importantes beneficios para las y los
+                        estudiantes.
                     </p>
                     <p>
-                        A su vez, uno de los primeros convenios que firmamos desde la Federación fue con el Banco
-                        Municipal de Rosario. Siendo parte de la Comunidad los estudiantes pueden acceder a una tarjeta
-                        de crédito y debito.
+                        Asimismo, uno de los primeros convenios firmados por la Federación fue con el Banco Municipal de
+                        Rosario, permitiendo que los estudiantes puedan acceder a tarjetas de crédito y débito.
                     </p>
                 </div>
             </div>
@@ -147,48 +156,48 @@
             <div class="proposal-row reverse">
                 <div class="proposal-text">
                     <p>
-                        La misma brinda descuentos en gastronomía, supermercados, farmacia entre otros.
-                    </p>
-
-                    <p>
-                        La misma brinda descuentos en gastronomía, supermercados, farmacia entre otros. <br>
-                        Por otro lado la FUR se encarga de brindan herramientas para una de las problematices mas
-                        actuales en estos tiempos, como son los alquileres para aquellos estudiantes que vienen de
-                        afuera.
+                        Estos convenios brindan descuentos en gastronomía, supermercados, farmacias y otros rubros.
                     </p>
                     <p>
-                        Es por eso que la Federación firmo un convenio con COCIR que es el colegio de corredores
-                        inmobiliario de rosario mediante el cual se puede pedir asesoramiento gratuito para los
-                        contratos de alquiler.
+                        Por otro lado, la FUR trabaja activamente en una de las problemáticas más actuales para los
+                        estudiantes: el acceso a la vivienda y los alquileres, especialmente para quienes vienen de
+                        otras
+                        localidades.
                     </p>
                     <p>
-
-                        A su vez se armo una guía del inquilino para poder brindar ayuda aquellos estudiantes que lo
+                        En este marco, la Federación firmó un convenio con COCIR, el Colegio de Corredores Inmobiliarios
+                        de
+                        Rosario, que permite acceder a asesoramiento gratuito para contratos de alquiler.
+                    </p>
+                    <p>
+                        Además, se elaboró una Guía del Inquilino para acompañar y orientar a las y los estudiantes que
+                        lo
                         necesiten.
-                        Desde la Federación además de preocuparnos por los meses donde hay actividad académica nos
-                        preocupamos también por los meses donde la actividad universitaria no es tan alta.
                     </p>
                 </div>
 
                 <div class="proposal-image">
-                    <img src="img/Propuesta/FUR/F4.jpeg" alt="Equipo de clases de consulta">
+                    <img src="img/Propuesta/FUR/F4.jpeg" alt="Asesoramiento en alquileres">
                 </div>
             </div>
+
             <!-- FILA 5 -->
             <div class="proposal-row">
                 <div class="proposal-image">
-                    <img src="img/Propuesta/FUR/F5.jpeg" alt="Grupos de estudio">
+                    <img src="img/Propuesta/FUR/F5.jpeg" alt="Actividades recreativas para estudiantes">
                 </div>
 
                 <div class="proposal-text">
                     <p>
-                        Es por eso que firmamos un convenio con la municipalidad de Rosario para en los meses de verano
-                        los y las estudiantes puedan realizar actividades recreativas.
-
+                        La Federación también se ocupa de acompañar a las y los estudiantes durante los meses en los que
+                        la
+                        actividad académica disminuye.
                     </p>
                     <p>
-                        Con este convenio los estudiantes de la UNR pueden acceder a precios muy bajos a la Florida y
-                        piletas del parque Alem.
+                        Por eso, se firmó un convenio con la Municipalidad de Rosario para que, durante el verano, los
+                        estudiantes de la UNR puedan realizar actividades recreativas y acceder a precios accesibles en
+                        La
+                        Florida y las piletas del Parque Alem.
                     </p>
                 </div>
             </div>
@@ -198,7 +207,7 @@
     <section class="cta">
         <div class="container">
             <h2>Seguinos en Instagram</h2>
-            <p>Enterate de novedades, actividades y todo lo que pasa en la facultad.</p>
+            <p>Entérate de novedades, actividades y todo lo que pasa en la facultad.</p>
 
             <div class="social-grid">
                 <a href="https://www.instagram.com/franjamorada.corretaje?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
