--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
             </h1>
 
             <nav class="nav-container">
-                <button class="menu-toggle" id="menuToggle" aria-label="Abrir menú">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                 <button class="menu-toggle" id="menuToggle" aria-label="Abrir menú">
+                    ☰
                 </button>
 
 
@@ -84,7 +82,7 @@
                 Somos estudiantes como vos, que además de cursar y rendir, estamos comprometidos y defendemos las ideas
                 y principios que surgen de la Reforma Universitaria de 1918, la cual incorpora los conceptos de
                 Autonomía Universitaria, Cogobierno y Participación Estudiantil, Excelencia Académica, Libertad de
-                Cátedra y Acceso a los cargos a través de concursos públicos y que hoy mas que nunca estamos convencidos
+                Cátedra y Acceso a los cargos a través de concursos públicos y que hoy más que nunca estamos convencidos
                 de hay que defender.
             </p>
             <br>
@@ -130,7 +128,7 @@
                     <h3>Extensión</h3>
                     <p>Creemos en una Universidad comprometida con la sociedad, abierta y vinculada a los problemas
                         reales de su tiempo. Promovemos actividades de extensión, participación y trabajo conjunto con
-                        la comunidad, entendiendo que la Universidad Pública debe devolver a la sociedad lo que esta le
+                        la comunidad, entendiendo que la Universidad Pública debe devolver a la sociedad lo que ésta le
                         brinda.</p>
                 </article>
             </div>
@@ -141,7 +139,7 @@
     <section class="cta">
         <div class="container">
             <h2>Seguinos en Instagram</h2>
-            <p>Enterate de novedades, actividades y todo lo que pasa en la facultad.</p>
+            <p>Entérate de novedades, actividades y todo lo que pasa en la facultad.</p>
 
             <div class="social-grid">
                 <a href="https://www.instagram.com/franjamorada.corretaje?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
