--- a/propuestas_academicas.html
+++ b/propuestas_academicas.html
@@ -69,31 +69,31 @@
             <!-- TEXTO SUPERIOR -->
             <div class="proposal-top">
                 <p>
-                    En cada turno de examen organizamos clases de consultas con docentes y titulares de Cátedra, grupos
-                    de estudio con ayudantes alumnos, clases de repaso con docentes y talleres. Contamos con clases
-                    grabadas, diapositivas de repaso, guías de estudio, entre otras herramientas que le permitan al
-                    estudiante poder seguir avanzando su carrera de la mejor manera.
+                    En cada turno de examen organizamos clases de consulta con docentes y titulares de cátedra, grupos
+                    de estudio coordinados por ayudantes alumnos, clases de repaso y talleres. Además, contamos con
+                    clases grabadas, diapositivas de repaso y guías de estudio, entre otras herramientas que permiten
+                    a las y los estudiantes seguir avanzando en su carrera de la mejor manera.
                 </p>
             </div>
 
             <!-- FILA 1 -->
             <div class="proposal-row">
                 <div class="proposal-image">
-                    <img src="img/Propuesta/ima1.jpeg" alt="Grupos de estudio">
+                    <img src="img/Propuesta/ima1.jpeg" alt="Grupos de estudio para exámenes">
                 </div>
 
                 <div class="proposal-text">
                     <p>
-                        Somos la única agrupación que da mas de 20 grupos de estudios de Abogacía dados por ayudantes de
-                        cátedra en la cual participan mas de 600 estudiantes antes de cada llamado.
+                        Somos la única agrupación que brinda más de 20 grupos de estudio de Abogacía, dictados por
+                        ayudantes de cátedra, en los que participan más de 600 estudiantes antes de cada llamado.
                     </p>
                     <p>
-                        A su vez damos grupos de estudio de todas las materias de Corretaje Inmobiliario y garantizamos
-                        clases de consultas.
+                        Asimismo, ofrecemos grupos de estudio de todas las materias de Corretaje Inmobiliario y
+                        garantizamos clases de consulta para cada turno de examen.
                     </p>
                     <p>
-                        Por turno de examen conseguimos mas de 25 clases de consulta por turno de examen en donde se
-                        conectan mas de 800 personas
+                        En cada turno de examen logramos organizar más de 25 clases de consulta, con la participación
+                        de más de 800 estudiantes.
                     </p>
                 </div>
             </div>
@@ -102,14 +102,13 @@
             <div class="proposal-row reverse">
                 <div class="proposal-text">
                     <p>
-                        Nuestro equipo de clases de consultas es el encargado de contactar a cada cátedra para
-                        garantizar todas y cada una de las clases de consulta que logramos garantizar para todos y todas
-                        las estudiantes.
+                        Nuestro equipo de clases de consulta es el encargado de contactar a cada cátedra para garantizar
+                        la realización de todas las instancias de acompañamiento académico destinadas a las y los
+                        estudiantes.
                     </p>
-
                     <p>
-                        Este equipo es el encargado de observar el calendario académico, las materias que se rinden en
-                        cada mes y coordinar con los estudiantes para que puedan sacarse todas las dudas que tengan!
+                        Además, se ocupa de analizar el calendario académico, las materias que se rinden en cada mes y
+                        coordinar con los estudiantes para que puedan evacuar todas sus dudas.
                     </p>
                 </div>
 
@@ -117,14 +116,13 @@
                     <img src="img/Propuesta/ima2.jpeg" alt="Equipo de clases de consulta">
                 </div>
             </div>
-
         </div>
     </section>
 
     <section class="cta">
         <div class="container">
             <h2>Seguinos en Instagram</h2>
-            <p>Enterate de novedades, actividades y todo lo que pasa en la facultad.</p>
+            <p>Entérate de novedades, actividades y todo lo que pasa en la facultad.</p>
 
             <div class="social-grid">
                 <a href="https://www.instagram.com/franjamorada.corretaje?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
