--- a/secretarias_ced.html
+++ b/secretarias_ced.html
@@ -70,10 +70,10 @@
             <!-- TEXTO SUPERIOR -->
             <div class="proposal-top">
                 <p>
-                    El centro de estudiantes, es el órgano de representación gremial de todos los y las estudiantes
-                    dentro de la Facultad. El mismo esta conformado por 15 secretarias que se asignan a todas las
-                    agrupaciones que participen en la elecciones estudiantiles porcentualmente según los resultados
-                    obtenidos.
+                    El Centro de Estudiantes es el órgano de representación gremial de todos y todas las estudiantes
+                    dentro de la Facultad. El mismo está conformado por 15 secretarías que se asignan a todas las
+                    agrupaciones que participan en las elecciones estudiantiles de manera proporcional, según los
+                    resultados obtenidos.
                 </p>
             </div>
 
@@ -85,24 +85,25 @@
 
                 <div class="proposal-text">
                     <p>
-                        Nuestros secretarios son los encargados de planificar, ejecutar y llevar adelante todas y cada
-                        una de las actividades.
+                        Nuestros secretarios y secretarias son los encargados de planificar, ejecutar y llevar adelante
+                        todas y cada una de las actividades.
                     </p>
                     <p>
-                        Siempre pensando actividades por y para los estudiantes siguiendo los postulados de la reforma
-                        universitaria.
+                        Siempre pensando actividades por y para los estudiantes, siguiendo los postulados de la Reforma
+                        Universitaria.
                     </p>
                     <p>
-                        Después de las elecciones del corriente año nuestra agrupación cuenta con 4 secretarias:
+                        Después de las elecciones del corriente año, nuestra agrupación cuenta con cuatro secretarías:
+                    </p>
                     <ul>
-                        - Secretaría de Cultura y Deportes <br>
-                        - Secretaría de Género y Diversidad <br>
-                        - Secretaría de Prensa y Difusión <br>
-                        - Secretaría de Relaciones Institucionales
+                        <li>Secretaría de Cultura y Deportes</li>
+                        <li>Secretaría de Género y Diversidad</li>
+                        <li>Secretaría de Prensa y Difusión</li>
+                        <li>Secretaría de Relaciones Institucionales</li>
                     </ul>
-                    </p>
                 </div>
             </div>
+
             <!-- FILA 2 -->
             <div class="proposal-row">
                 <div class="proposal-image">
@@ -110,20 +111,19 @@
                 </div>
 
                 <div class="proposal-text">
+                    <p><b>SECRETARÍA DE DEPORTE</b></p>
                     <p>
-                        <b>SECRETARIA DE DEPORTE</b>
-                    </p>
-                    <p>
-                        Ellos son Loana y Nacho, nuestros secretarios de deporte del periodo 2025 - 2026
+                        Ellos son Loana y Nacho, nuestros secretarios de Deporte para el período 2025–2026.
                     </p>
                     <p>
                         Serán los encargados de planificar y realizar diferentes actividades con el objetivo de vincular
                         a la comunidad de nuestra facultad con el deporte.
                     </p>
                     <p>
-                        Con el apoyo de todo nuestro grupo militante y amigos dispuestos a colaborar llevaremos a
-                        nuestra querida Fder a todos los deportes interfacultades y transformaremos esta secretaria en
-                        un ejemplo de trabajo, dispersión y sostén de todos aquellos estudiantes que lo necesiten.
+                        Con el apoyo de todo nuestro grupo militante y de amigos dispuestos a colaborar, llevaremos a
+                        nuestra querida FDER a participar en todos los deportes interfacultades y transformaremos esta
+                        secretaría en un ejemplo de trabajo, contención y acompañamiento para todos aquellos estudiantes
+                        que lo necesiten.
                     </p>
                 </div>
             </div>
@@ -131,18 +131,15 @@
             <!-- FILA 3 -->
             <div class="proposal-row reverse">
                 <div class="proposal-text">
+                    <p><b>SECRETARÍA DE PRENSA</b></p>
                     <p>
-                        <b>SECRETARIA DE PRENSA </b>
-                    </p>
-                    <p>
-                        Ellos son Walter y Pili, nuestros secretarios de prensa para el periodo 2025 - 2026.
+                        Ellos son Walter y Pili, nuestros secretarios de Prensa para el período 2025–2026.
                     </p>
                     <p>
                         Serán los encargados de llevar adelante toda la comunicación de nuestra organización,
-                        reinventándose constantemente para lograr brindar toda la información que a nuestra comunidad
-                        universitaria le interesa y por sobre todas las cosas, son los que tienen el deber de vincular y
-                        lograr la participación de los estudiantes de los debates y decisiones institucionales que en
-                        estos tiempos nos están atravesando.
+                        reinventándose constantemente para brindar la información que a nuestra comunidad universitaria
+                        le interesa y, por sobre todas las cosas, fomentar la participación de los estudiantes en los
+                        debates y decisiones institucionales que nos atraviesan en estos tiempos.
                     </p>
                 </div>
 
@@ -150,6 +147,7 @@
                     <img src="img/Propuesta/SecretariaCED/F3.jpeg" alt="Equipo de clases de consulta">
                 </div>
             </div>
+
             <!-- FILA 4 -->
             <div class="proposal-row">
                 <div class="proposal-image">
@@ -157,35 +155,32 @@
                 </div>
 
                 <div class="proposal-text">
+                    <p><b>SECRETARÍA DE EXTENSIÓN</b></p>
                     <p>
-                        SECRETARIA DE EXTENSIÓN
+                        Ellas son Kiari y Valen, nuestras secretarias de Extensión para el período 2025–2026.
                     </p>
                     <p>
-                        Ellas son Kiari y Valen, nuestras secretarias de extensión para el periodo 2025 - 2026.
+                        Son las encargadas de vincular la institución con la comunidad. La extensión universitaria es
+                        uno de los principales pilares de la Reforma Universitaria.
                     </p>
                     <p>
-                        Son las encargadas de vincular la institución con la comunidad, la extensión universitaria es
-                        uno de los principales pilares de la reforma universitaria.
-                    </p>
-                    <p>
-                        Su objetivo será consolidar un vinculo entre nuestra casa de estudio y la sociedad, generando un
-                        intercambio de conocimientos y experiencias únicas.
+                        Su objetivo será consolidar un vínculo entre nuestra casa de estudios y la sociedad, generando
+                        un intercambio de conocimientos y experiencias únicas.
                     </p>
                 </div>
             </div>
+
             <!-- FILA 5 -->
             <div class="proposal-row reverse">
                 <div class="proposal-text">
+                    <p><b>SECRETARÍA DE CIENCIA Y TÉCNICA</b></p>
                     <p>
-                        <b>SECRETARIA DE CIENCIA Y TECNICA</b>
+                        Ellos son Mau y Nere, nuestros secretarios de Ciencia y Técnica para el período 2025–2026.
                     </p>
                     <p>
-                        Ellos son Mau y Nere, nuestros secretarios de prensa para el periodo 2025 - 2026.
-                    </p>
-                    <p>
-                        Son los encargados de promocionar y planificar actividades de investigación científica para los
-                        estudiantes de la Fder. Son la sección académica de nuestra organización y quienes
-                        constantemente están velando por la excelencia académica que nos caracteriza.
+                        Son los encargados de promover y planificar actividades de investigación científica para los
+                        estudiantes de la FDER. Constituyen la sección académica de nuestra organización y velan
+                        constantemente por la excelencia académica que nos caracteriza.
                     </p>
                 </div>
                 <div class="proposal-image">
@@ -198,7 +193,7 @@
     <section class="cta">
         <div class="container">
             <h2>Seguinos en Instagram</h2>
-            <p>Enterate de novedades, actividades y todo lo que pasa en la facultad.</p>
+            <p>Entérate de novedades, actividades y todo lo que pasa en la facultad.</p>
 
             <div class="social-grid">
                 <a href="https://www.instagram.com/franjamorada.corretaje?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
